--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@ ______                              _  ______         _____ _            _____  
     <!-- Page Styling -->
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/nav-bar.css">
-    <link rel="stylesheet" href="./styles/image-carousel.css">
-    <link rel="stylesheet" href="./styles/what-we-do.css">
-    <link rel="stylesheet" href="./styles/about-us.css">
-    <link rel="stylesheet" href="./styles/news-and-events.css">
-    <link rel="stylesheet" href="./styles/contact-us.css">
+    <link rel="stylesheet" href="./styles/home/image-carousel.css">
+    <link rel="stylesheet" href="./styles/home/what-we-do.css">
+    <link rel="stylesheet" href="./styles/home/about-us.css">
+    <link rel="stylesheet" href="./styles/home/news-and-events.css">
+    <link rel="stylesheet" href="./styles/home/contact-us.css">
     <link rel="stylesheet" href="./styles/footer.css">
 
 </head>
